--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a id="skill"><img class="tit" src="titleimg/skills.png"></a>
         <a id="E"><img class="tit" src="titleimg/E&W.png"></a>
         <a id="contact"><img class="tit" src="titleimg/contactme.png"></a>
-        <button class="butt"><a style="color: white;"; href="https://open.spotify.com/collection/tracks"><span>MY WEBSITE</span></a></button>
+        <button class="butt"><a style="color: white;"; href="https://linyuri.github.io/library/"><span>WEBSITE</span></a></button>
         <audio id="music2" src="Wolfgang.wav"  loop="loop" autoplay="autoplay">你的瀏覽器不支援audio標籤。</audio>    
         <a href="javascript:playPause();"><img class="music" src="logo/music.png" width="48" height="50" id="music_btn2" border="0"></a>  
     </header>
@@ -255,8 +255,8 @@
                 </table>
             </td>
             <td>
-                <img style="border-radius: 5%; border: rgba(134, 133, 133, 0.164) double 10px;"  src="photo/library.png" width="400px"><h3 style="padding-bottom: 40px; color: rgb(90, 90, 90);">多媒體期中專案</h3>
-                <img style="border-radius: 5%;  border: rgba(135, 138, 138, 0.171) double 10px;"  src="photo/ShootGame.png" width="400px"><h3 style="color: rgb(90, 90, 90);">資料結構射擊遊戲建模體驗</h3>
+                <a href="https://linyuri.github.io/library/"><img class="library" style="border-radius: 5%; border: rgba(134, 133, 133, 0.164) double 10px;"  src="photo/library.png" width="400px"></a><h3 style="padding-bottom: 40px; color: rgb(90, 90, 90);">多媒體期中專案</h3>
+                <img class="library" style="border-radius: 5%;  border: rgba(135, 138, 138, 0.171) double 10px;"  src="photo/ShootGame.png" width="400px"><h3 style="color: rgb(90, 90, 90);">資料結構射擊遊戲建模體驗</h3>
             </td>
             
             </tr>
